[package]
name = "Windows3x_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdl2 = "^0.35.2"
bitflags = "1.3.2"
syscall = { path = "./lib/syscall" }
num-derive = "0.3"
num-traits = "0.2"
chrono = "0.4.19"
